--- a/index.html
+++ b/index.html
@@ -364,3 +364,55 @@
 
 </body>
 </html>
+<style>
+.marquee-box {
+    width: 100%;
+    background: linear-gradient(90deg, #2b2b2b, #000000, #2b2b2b);
+    padding: 12px 0;
+    overflow: hidden;
+    position: fixed;
+    bottom: 20px; 
+    left: 0;
+    z-index: 9999;
+    border-top: 2px solid #d4af37;
+    border-bottom: 2px solid #d4af37;
+    box-shadow: 0 0 12px #d4af37;
+}
+
+.marquee-text {
+    display: inline-block;
+    white-space: nowrap;
+    font-size: 26px;
+    font-weight: 700;
+    color: #ffd700; /* VIP Gold */
+    animation: marquee 14s linear infinite;
+    text-shadow: 
+        0 0 10px #ffea00,
+        0 0 20px #ffd700,
+        0 0 30px #ffbf00,
+        0 0 40px #ff9900;
+    letter-spacing: 1px;
+}
+
+.vip-number {
+    color: #fff;
+    font-weight: 900;
+    text-shadow:
+        0 0 12px #ffea00,
+        0 0 22px #ffffff,
+        0 0 35px #ffbf00;
+}
+
+@keyframes marquee {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
+}
+</style>
+
+<div class="marquee-box">
+    <div class="marquee-text">
+        ⭐ सोलर पंप विषयी सर्व/अधिक माहिती साठी संपर्क :
+        <span class="vip-number">9146122143</span> ,
+        <span class="vip-number">9765738571</span> ⭐
+    </div>
+</div>
