Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -457,7 +457,8 @@ document.addEventListener("click", function (e) {
 
         navigator.clipboard.writeText(codeText).then(function () {
 
-            let msg = "सर, पंचनामा कोड कॉपी झाला आहे.\nकृपया पुढील साइटवर पेस्ट करून सबमिट करावा.";
+            let msg = "खालील पंचनामा कोड कॉपी झाला आहे.
+कृपया पुढील साइटवर पेस्ट करून सबमिट करावा, अनुदान जमा झाल्या विषयी सर्व माहिती मिळेल.";
 
             if (confirm(msg)) {
                 window.open(
@@ -477,3 +478,4 @@ document.addEventListener("click", function (e) {
 
 </body>
 </html>
+
