--- a/index.html
+++ b/index.html
@@ -457,8 +457,7 @@ document.addEventListener("click", function (e) {
 
         navigator.clipboard.writeText(codeText).then(function () {
 
-            let msg = "खालील पंचनामा कोड कॉपी झाला आहे.
-कृपया पुढील साइटवर पेस्ट करून सबमिट करावा, अनुदान जमा झाल्या विषयी सर्व माहिती मिळेल.";
+            let msg = "सर, पंचनामा कोड कॉपी झाला आहे.\nकृपया पुढील साइटवर पेस्ट करून सबमिट करावा.";
 
             if (confirm(msg)) {
                 window.open(
@@ -478,5 +477,3 @@ document.addEventListener("click", function (e) {
 
 </body>
 </html>
-
-
