--- a/index.html
+++ b/index.html
@@ -441,13 +441,6 @@
 }
 </style>
 
-<div class="marquee-box">
-    <div class="marquee-text">
-        ⭐ सोलर पंप विषयी सर्व/अधिक माहिती साठी संपर्क :
-        <span class="vip-number">9146122143</span> ,
-        <span class="vip-number">9765738571</span> ⭐
-    </div>
-</div>
 <script>
 document.addEventListener("click", function (e) {
 
@@ -478,3 +471,39 @@ document.addEventListener("click", function (e) {
 
 </body>
 </html>
+<style>
+    .bottom-scroll {
+        width: 100%;
+        background: #000;
+        color: #fff;
+        padding: 15px 0;
+        position: fixed;
+        bottom: 40px; /* नीचे से ऊपर उठाया */
+        left: 0;
+        font-size: 26px; /* text बड़ा */
+        font-weight: bold;
+        overflow: hidden;
+        white-space: nowrap;
+        z-index: 9999;
+        border-radius: 8px 8px 0 0; /* थोड़ा smooth design */
+    }
+
+    .bottom-scroll span {
+        display: inline-block;
+        padding-left: 100%;
+        animation: scroll-left 20s linear infinite;
+    }
+
+    @keyframes scroll-left {
+        from {
+            transform: translateX(0%);
+        }
+        to {
+            transform: translateX(-100%);
+        }
+    }
+</style>
+
+<div class="bottom-scroll">
+    <span>सोलर पंप विषयी सर्व/अधिक माहितीसाठी संपर्क : 9146122143, 9765738571,</span>
+</div>
